// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a StyledHOC wrapped View with empty styles using Snapshots 1`] = `
<View
  style={
    Array [
      Object {},
      undefined,
    ]
  }
/>
`;

exports[`renders a StyledHOC wrapped View with styles using Snapshots 1`] = `
<View
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
/>
`;
